# scope2

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml
examples/: CMakeLists.txt  identity_as_default_projection.cpp  identity_direct_usage.cpp  scope_example.cpp  unique_resource_example.cpp
include/beman/scope/: identity.hpp  scope.hpp  scope_guard_demo.hpp
src/beman/scope/: CMakeLists.txt  identity.cpp  scope.cpp
tests/beman/scope/: CMakeLists.txt  identity.test.cpp  scope.test.cpp
